# COMP4098_Supplementary_Material_Submission

./: README.md
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: ros_front.yaml  yolov4_front.yaml  yolov4_tiny_tobii.yaml
darknet_ros/darknet_ros/config/backup/: ros_left.yaml  ros_rear.yaml  ros_right.yaml  tobii.yaml  yolov4_left.yaml  yolov4_rear.yaml
darknet_ros/darknet_ros/launch/: darknet_ros_front.launch  darknet_ros_gdb.launch  darknet_ros_tobii.launch
darknet_ros/darknet_ros/launch/backup/: darknet_ros_left.launch  darknet_ros_rear.launch  darknet_ros_right.launch
spot_description/urdf/: spot.urdf
spot_ros_autonomy/: CMakeLists.txt
spot_ros_autonomy/launch/: OBJ_DETECT.launch  SAR_AI.launch  SAR_NORMAL.launch  TOBII.launch  TRAIN.launch  YOLO_FRONT.launch  darknet_tobii.launch  navigate.launch  reset.launch  rqt.launch
spot_ros_autonomy/launch/include/: amcl.launch  gmapping.launch  move_base.launch
spot_ros_autonomy/maps/: map.pgm  map.yaml
spot_ros_autonomy/src/: FLC.R  fuzzy_logic_controller_node.py  object_detection_node.py  qr_code_overlay.py  reset.py  spot_train_controller.py  tobii_controller_node.py
spot_ros_autonomy/worlds/: SAR.world  SAR_AI.world  training_world.world
